--- a/vasca/examples/query_GALEX.ipynb
+++ b/vasca/examples/query_GALEX.ipynb
@@ -44,10 +44,10 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table140542446199728-577707\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>dataproduct_type</th><th>calib_level</th><th>obs_collection</th><th>obs_id</th><th>target_name</th><th>s_ra</th><th>s_dec</th><th>t_min</th><th>t_max</th><th>t_exptime</th><th>wavelength_region</th><th>filters</th><th>em_min</th><th>em_max</th><th>target_classification</th><th>obs_title</th><th>t_obs_release</th><th>instrument_name</th><th>proposal_pi</th><th>proposal_id</th><th>proposal_type</th><th>project</th><th>sequence_number</th><th>provenance_name</th><th>s_region</th><th>jpegURL</th><th>dataURL</th><th>dataRights</th><th>mtFlag</th><th>srcDen</th><th>intentType</th><th>obsid</th><th>objID</th></tr></thead>\n",
-       "<tr><td>0</td><td>image</td><td>2</td><td>GALEX</td><td>2592597978464124928</td><td>PS_XMMLSS_MOS00</td><td>35.578863351058885</td><td>-3.14176421214975</td><td>54791.262777777774</td><td>55512.31023148148</td><td>40457.25</td><td>UV</td><td>NUV</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>--</td><td>55953.94460633</td><td>GALEX</td><td>--</td><td>--</td><td>DIS</td><td>DIS</td><td>--</td><td>DIS</td><td>CIRCLE ICRS  35.57886335  -3.14176421 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS00-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/PS_XMMLSS_MOS00-nd-exp.fits.gz</td><td>PUBLIC</td><td>--</td><td>5885.0</td><td>science</td><td>2047</td><td>3659</td></tr>\n",
-       "<tr><td>1</td><td>image</td><td>2</td><td>GALEX</td><td>2592668347208302592</td><td>PS_XMMLSS_MOS01</td><td>36.49984981667359</td><td>-3.4923125504146</td><td>54791.33122685185</td><td>55512.37857638889</td><td>38609.0</td><td>UV</td><td>NUV</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>--</td><td>55953.94680547</td><td>GALEX</td><td>--</td><td>--</td><td>DIS</td><td>DIS</td><td>--</td><td>DIS</td><td>CIRCLE ICRS  36.49984982  -3.49231255 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08152-PS_XMMLSS_MOS01/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS01-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08152-PS_XMMLSS_MOS01/d/01-main/0007-img/07-try/PS_XMMLSS_MOS01-nd-exp.fits.gz</td><td>PUBLIC</td><td>--</td><td>5885.0</td><td>science</td><td>2048</td><td>3661</td></tr>\n",
+       "<table id=\"table139690208328432-883798\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>idx</th><th>intentType</th><th>obs_collection</th><th>provenance_name</th><th>instrument_name</th><th>project</th><th>filters</th><th>wavelength_region</th><th>target_name</th><th>target_classification</th><th>obs_id</th><th>s_ra</th><th>s_dec</th><th>dataproduct_type</th><th>proposal_pi</th><th>calib_level</th><th>t_min</th><th>t_max</th><th>t_exptime</th><th>em_min</th><th>em_max</th><th>obs_title</th><th>t_obs_release</th><th>proposal_id</th><th>proposal_type</th><th>sequence_number</th><th>s_region</th><th>jpegURL</th><th>dataURL</th><th>dataRights</th><th>mtFlag</th><th>srcDen</th><th>obsid</th><th>objID</th></tr></thead>\n",
+       "<tr><td>0</td><td>science</td><td>GALEX</td><td>DIS</td><td>GALEX</td><td>DIS</td><td>NUV</td><td>UV</td><td>PS_XMMLSS_MOS00</td><td>--</td><td>2592597978464124928</td><td>35.578863351058885</td><td>-3.14176421214975</td><td>image</td><td>--</td><td>2</td><td>54791.262777777774</td><td>55512.31023148148</td><td>40457.25</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>55953.94460633</td><td>--</td><td>DIS</td><td>--</td><td>CIRCLE ICRS  35.57886335  -3.14176421 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS00-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/PS_XMMLSS_MOS00-nd-exp.fits.gz</td><td>PUBLIC</td><td>--</td><td>5885.0</td><td>2047</td><td>3659</td></tr>\n",
+       "<tr><td>1</td><td>science</td><td>GALEX</td><td>DIS</td><td>GALEX</td><td>DIS</td><td>NUV</td><td>UV</td><td>PS_XMMLSS_MOS01</td><td>--</td><td>2592668347208302592</td><td>36.49984981667359</td><td>-3.4923125504146</td><td>image</td><td>--</td><td>2</td><td>54791.33122685185</td><td>55512.37857638889</td><td>38609.0</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>55953.94680547</td><td>--</td><td>DIS</td><td>--</td><td>CIRCLE ICRS  36.49984982  -3.49231255 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08152-PS_XMMLSS_MOS01/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS01-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08152-PS_XMMLSS_MOS01/d/01-main/0007-img/07-try/PS_XMMLSS_MOS01-nd-exp.fits.gz</td><td>PUBLIC</td><td>--</td><td>5885.0</td><td>2048</td><td>3661</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
        "display: inline-block; margin-right: 1em; }\n",
@@ -71,19 +71,19 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140542446199728-577707').dataTable()\");\n",
+       "    console.log(\"$('#table139690208328432-883798').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140542446199728-577707').dataTable({\n",
+       "    $('#table139690208328432-883798').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
        "        pagingType: \"full_numbers\",\n",
-       "        columnDefs: [{targets: [0, 2, 6, 7, 8, 9, 10, 13, 14, 17, 23, 30], type: \"optionalnum\"}]\n",
+       "        columnDefs: [{targets: [0, 11, 12, 15, 16, 17, 18, 19, 20, 22, 25, 31], type: \"optionalnum\"}]\n",
        "    });\n",
        "});\n",
        "</script>\n"
@@ -143,7 +143,7 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table140541420792672-519144\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139689177543056-275354\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>RATileCenter</th><th>DECTileCenter</th><th>survey</th><th>nexptime</th><th>fexptime</th><th>imgRunID</th><th>ParentImgRunID</th><th>joinID</th><th>tileNum</th><th>specTileNum</th><th>source</th><th>nPhotoObjects</th><th>nPhotoVisits</th><th>PhotoObsDate</th><th>spectra</th><th>nSpectra</th><th>nSpectraVisits</th><th>SpecObsDate</th><th>visitNum</th><th>subvis</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th><th>minSpecObsDate</th><th>maxSpecObsDate</th><th>PhotoObsDate_MJD</th><th>gall</th><th>galb</th><th>hpix</th></tr></thead>\n",
        "<tr><td>0</td><td>35.5606252902383</td><td>-3.14743664508478</td><td>DIS</td><td>1345.25</td><td>0.0</td><td>2592597841327161344</td><td>2592597978464124928</td><td>63341</td><td>8150</td><td>-999</td><td>visitI</td><td>9832</td><td>1</td><td>12/18/2009 9:09:30 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>16</td><td>-999</td><td>12/18/2009 9:09:30 AM</td><td>12/18/2009 9:31:55 AM</td><td>null</td><td>null</td><td>55183.38159722222</td><td>169.00600771825543</td><td>-57.654641102907654</td><td>725160</td></tr>\n",
        "<tr><td>1</td><td>35.572681398541</td><td>-3.16989331767195</td><td>DIS</td><td>1199.35</td><td>0.0</td><td>2592597841360715776</td><td>2592597978464124928</td><td>44436</td><td>8150</td><td>-999</td><td>visitI</td><td>9249</td><td>1</td><td>12/20/2009 8:50:42 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>17</td><td>-999</td><td>12/20/2009 8:50:42 AM</td><td>12/20/2009 9:10:41 AM</td><td>null</td><td>null</td><td>55185.36854166666</td><td>169.05021602003802</td><td>-57.66412379765083</td><td>725160</td></tr>\n",
@@ -170,14 +170,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140541420792672-519144').dataTable()\");\n",
+       "    console.log(\"$('#table139689177543056-275354').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140541420792672-519144').dataTable({\n",
+       "    $('#table139689177543056-275354').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -340,7 +340,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7d71f9e0ed5471faaddbc2aa8bc6b8f",
+       "model_id": "6097c0676c2448309c35a0cba5db8989",
        "version_major": 2,
        "version_minor": 0
       },
@@ -401,7 +401,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7270292f7a82469586020820c5136ef5",
+       "model_id": "5e47faf774544d3a92989bdc06acddcb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -426,7 +426,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7fa36c776c5471d936e54284ef01575",
+       "model_id": "0c9a306e1a7f4fafb68b792eb8ec67d1",
        "version_major": 2,
        "version_minor": 0
       },
