Fixed excessive memory usage
Former-commit-id: 01c3db55521b97df481268caa812098d749acc21

--- a/vasca/examples/vasca_pipe_source_distributions.ipynb
+++ b/vasca/examples/vasca_pipe_source_distributions.ipynb
@@ -27,47 +27,54 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mag(AB)\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<div><i>Table length=6020</i>\n",
-       "<table id=\"table140454214134528\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<div><i>Table length=42745</i>\n",
+       "<table id=\"table139644501000000\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_nxv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>assoc_id</th><th>assoc_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>assoc_ffactor</th><th>assoc_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>mag</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th></th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>mag</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32</th><th>bool</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int32</th><th>int32</th><th>int32</th><th>float32</th></tr></thead>\n",
-       "<tr><td>-1</td><td>15</td><td>242.93102379645694</td><td>54.286386629528124</td><td>0.17731154</td><td>-4.39246e-12</td><td>0.8976947</td><td>0.0006306459</td><td>1.4244179</td><td>546</td><td>0.14662908</td><td>1</td><td>False</td><td>5.2213197</td><td>0.19186763</td><td>-0.00806177</td><td>0.3521162</td><td>0.78106606</td><td>0.6955823</td><td>0.8956705</td><td>-2.3936713</td><td>-1</td><td>0</td><td>3</td><td>22.105549</td></tr>\n",
-       "<tr><td>-1</td><td>2</td><td>242.0632137559011</td><td>54.396743363360535</td><td>0.45914495</td><td>-8.734737e-12</td><td>1.7810209</td><td>0.10656401</td><td>1.0838335</td><td>2179</td><td>0.77336705</td><td>1</td><td>False</td><td>5.2845592</td><td>0.61960137</td><td>-0.025735121</td><td>0.05437793</td><td>0.79084224</td><td>0.0703401</td><td>0.79637516</td><td>-2.0563152</td><td>-1</td><td>1</td><td>3</td><td>22.092478</td></tr>\n",
-       "<tr><td>-1</td><td>15</td><td>243.30145690262273</td><td>54.05492694780656</td><td>0.20285103</td><td>1.6233325e-12</td><td>1.0524539</td><td>0.012089322</td><td>1.3949512</td><td>8</td><td>0.038793735</td><td>1</td><td>False</td><td>2.956851</td><td>0.16580923</td><td>-0.016698569</td><td>0.28008568</td><td>0.85019755</td><td>0.62093145</td><td>0.9404187</td><td>-0.78468484</td><td>-1</td><td>2</td><td>2</td><td>22.722927</td></tr>\n",
-       "<tr><td>-1</td><td>1</td><td>243.2802287306463</td><td>54.05693548827824</td><td>0.48236442</td><td>-8.154388e-12</td><td>0.9061263</td><td>0.12411936</td><td>1.0386324</td><td>11</td><td>0.3440325</td><td>1</td><td>False</td><td>5.4128203</td><td>0.8959698</td><td>-100.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>0.8263721</td><td>-1.2336268</td><td>-1</td><td>3</td><td>2</td><td>22.06644</td></tr>\n",
-       "<tr><td>-1</td><td>1</td><td>243.27834925882678</td><td>53.96037598554663</td><td>0.44822758</td><td>-6.149674e-12</td><td>3.2162282</td><td>6.107962e-05</td><td>3.7345881</td><td>14</td><td>0.64944667</td><td>1</td><td>False</td><td>3.516123</td><td>0.6588909</td><td>-100.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>0.5244896</td><td>-4.520234</td><td>-1</td><td>4</td><td>2</td><td>22.53484</td></tr>\n",
-       "<tr><td>-1</td><td>10</td><td>243.27580464852707</td><td>54.02848560077968</td><td>0.27760524</td><td>-9.90054e-12</td><td>1.545496</td><td>0.00011799772</td><td>1.78889</td><td>17</td><td>0.265805</td><td>1</td><td>False</td><td>2.6482177</td><td>0.1930518</td><td>-0.011290361</td><td>0.30669203</td><td>0.7126783</td><td>0.69660413</td><td>0.9228145</td><td>-0.8679742</td><td>-1</td><td>5</td><td>2</td><td>22.842615</td></tr>\n",
+       "<tr><td>-1</td><td>21</td><td>243.72631250546766</td><td>54.961703230186934</td><td>0.15282509</td><td>-2.7707365e-12</td><td>1.0478613</td><td>4.3845223e-05</td><td>1.5456147</td><td>73</td><td>0.3644442</td><td>1</td><td>False</td><td>4.4872336</td><td>0.16614628</td><td>-0.01451514</td><td>0.31563574</td><td>0.9399824</td><td>0.5616005</td><td>0.8966376</td><td>-2.4125338</td><td>-1</td><td>0</td><td>5</td><td>22.270052</td></tr>\n",
+       "<tr><td>-1</td><td>19</td><td>243.1927483657149</td><td>54.003436983381334</td><td>0.17605565</td><td>-8.1479203e-13</td><td>1.2157578</td><td>0.0001480726</td><td>1.645518</td><td>260</td><td>0.492568</td><td>1</td><td>False</td><td>3.032782</td><td>0.16001156</td><td>0.008262269</td><td>0.66360676</td><td>0.55466825</td><td>0.91908634</td><td>0.7089481</td><td>-5.3205605</td><td>-1</td><td>1</td><td>5</td><td>22.695396</td></tr>\n",
+       "<tr><td>-1</td><td>17</td><td>242.2038649067561</td><td>55.30062907761731</td><td>0.18675879</td><td>9.976338e-12</td><td>1.7245543</td><td>9.494136e-06</td><td>2.0455635</td><td>542</td><td>0.33867684</td><td>1</td><td>False</td><td>3.7834888</td><td>0.18234624</td><td>-0.008956876</td><td>0.48872027</td><td>0.7376212</td><td>0.7557514</td><td>0.82586074</td><td>-3.4334977</td><td>-1</td><td>2</td><td>5</td><td>22.455269</td></tr>\n",
+       "<tr><td>-1</td><td>4</td><td>242.06340055648113</td><td>54.39679725087804</td><td>0.28953043</td><td>-8.492317e-12</td><td>1.2910662</td><td>0.027201628</td><td>1.2251643</td><td>692</td><td>0.22258912</td><td>1</td><td>False</td><td>4.698502</td><td>0.40109354</td><td>-0.0036486618</td><td>0.5943825</td><td>0.34177014</td><td>1.114169</td><td>0.7030096</td><td>-4.615287</td><td>-1</td><td>3</td><td>5</td><td>22.2201</td></tr>\n",
+       "<tr><td>-1</td><td>5</td><td>241.98680063073462</td><td>55.15809286408099</td><td>0.33355612</td><td>4.7981463e-12</td><td>1.741571</td><td>0.017499456</td><td>1.5426122</td><td>798</td><td>0.41125387</td><td>1</td><td>False</td><td>2.2161605</td><td>0.25377348</td><td>-0.058937497</td><td>0.03821336</td><td>0.97190136</td><td>0.12905887</td><td>1.0290194</td><td>0.22433023</td><td>-1</td><td>4</td><td>5</td><td>23.035995</td></tr>\n",
+       "<tr><td>-1</td><td>8</td><td>241.3032972005574</td><td>54.828457143129874</td><td>0.29594746</td><td>2.0698807e-12</td><td>1.52426</td><td>0.011578997</td><td>1.5550216</td><td>1999</td><td>0.47401157</td><td>1</td><td>False</td><td>2.4219146</td><td>0.22218661</td><td>-0.049597014</td><td>0.1288449</td><td>0.96619195</td><td>0.26854426</td><td>1.0414585</td><td>0.38274828</td><td>-1</td><td>5</td><td>5</td><td>22.939604</td></tr>\n",
        "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>-1</td><td>-1</td><td>241.46714550724062</td><td>54.02385846212108</td><td>0.46414188</td><td>-7.2565747e-12</td><td>0.08315765</td><td>0.7573898</td><td>0.13893864</td><td>2881</td><td>0.4835812</td><td>-1</td><td>False</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-0.11593162</td><td>-9.404422</td><td>-1</td><td>6014</td><td>1</td><td>-1.0</td></tr>\n",
-       "<tr><td>-1</td><td>1</td><td>241.46656383178802</td><td>53.996716339792684</td><td>0.8047067</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>17423</td><td>1.3297826</td><td>1</td><td>False</td><td>3.1392334</td><td>0.6576005</td><td>-100.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>0.5021346</td><td>-4.445574</td><td>-1</td><td>6015</td><td>1</td><td>22.65794</td></tr>\n",
-       "<tr><td>-1</td><td>9</td><td>241.46554216199135</td><td>53.934509984906235</td><td>0.17873766</td><td>4.7125762e-12</td><td>0.8676301</td><td>6.789466e-06</td><td>2.9050345</td><td>-1</td><td>-1.0</td><td>1</td><td>False</td><td>66.33416</td><td>0.5599478</td><td>0.0034515546</td><td>18.05617</td><td>1.779635e-06</td><td>5.1708903</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>6016</td><td>1</td><td>19.345657</td></tr>\n",
-       "<tr><td>-1</td><td>-1</td><td>241.46192646767818</td><td>54.00789839082303</td><td>0.67313683</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>2882</td><td>1.7221525</td><td>-1</td><td>False</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-0.016399814</td><td>-58.281597</td><td>-1</td><td>6017</td><td>1</td><td>-1.0</td></tr>\n",
-       "<tr><td>-1</td><td>2</td><td>241.45334710095378</td><td>54.075706981497845</td><td>0.50358355</td><td>-6.507901e-12</td><td>0.45816505</td><td>0.16898488</td><td>0.88191146</td><td>-1</td><td>-1.0</td><td>1</td><td>True</td><td>5.230124</td><td>0.51532686</td><td>0.81405634</td><td>22.852419</td><td>4.040408e-10</td><td>39.09324</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>6018</td><td>1</td><td>22.10372</td></tr>\n",
-       "<tr><td>-1</td><td>1</td><td>241.43644828815394</td><td>53.987281675627905</td><td>0.6960347</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>1</td><td>False</td><td>12.930101</td><td>1.1515738</td><td>-100.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>6019</td><td>1</td><td>21.120995</td></tr>\n",
+       "<tr><td>-1</td><td>5</td><td>240.32572837599324</td><td>55.30370888990184</td><td>0.41705883</td><td>1.4153909e-11</td><td>2.4103982</td><td>0.0039655874</td><td>2.2245796</td><td>-1</td><td>-1.0</td><td>1</td><td>False</td><td>2.925854</td><td>0.33081955</td><td>-0.055473886</td><td>0.11524324</td><td>0.95266443</td><td>0.17227878</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42739</td><td>1</td><td>22.734367</td></tr>\n",
+       "<tr><td>-1</td><td>1</td><td>240.32490884476883</td><td>55.299050515477475</td><td>0.9624223</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>1</td><td>False</td><td>2.1798005</td><td>0.61295164</td><td>-100.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42740</td><td>1</td><td>23.053959</td></tr>\n",
+       "<tr><td>-1</td><td>-1</td><td>240.3203266020432</td><td>55.50627480017041</td><td>0.7444322</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>-1</td><td>False</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42741</td><td>1</td><td>-1.0</td></tr>\n",
+       "<tr><td>-1</td><td>1</td><td>240.31779816823231</td><td>55.3028622159417</td><td>1.6243336</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>1</td><td>False</td><td>2.513889</td><td>0.66450626</td><td>-100.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42742</td><td>1</td><td>22.899134</td></tr>\n",
+       "<tr><td>-1</td><td>-1</td><td>240.30599747957098</td><td>55.27458680961364</td><td>1.253594</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>-1</td><td>False</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42743</td><td>1</td><td>-1.0</td></tr>\n",
+       "<tr><td>-1</td><td>-1</td><td>240.29256798129626</td><td>55.4133236873463</td><td>0.79909253</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>-1</td><td>False</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42744</td><td>1</td><td>-1.0</td></tr>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "<Table length=6020>\n",
+       "<Table length=42745>\n",
        "fd_src_id nr_det         ra         ... rg_src_id nr_fd_srcs    mag   \n",
        "                        deg         ...                         mag   \n",
        "  int32   int32       float64       ...   int32     int32     float32 \n",
        "--------- ------ ------------------ ... --------- ---------- ---------\n",
-       "       -1     15 242.93102379645694 ...         0          3 22.105549\n",
-       "       -1      2  242.0632137559011 ...         1          3 22.092478\n",
-       "       -1     15 243.30145690262273 ...         2          2 22.722927\n",
-       "       -1      1  243.2802287306463 ...         3          2  22.06644\n",
-       "       -1      1 243.27834925882678 ...         4          2  22.53484\n",
-       "       -1     10 243.27580464852707 ...         5          2 22.842615\n",
+       "       -1     21 243.72631250546766 ...         0          5 22.270052\n",
+       "       -1     19  243.1927483657149 ...         1          5 22.695396\n",
+       "       -1     17  242.2038649067561 ...         2          5 22.455269\n",
+       "       -1      4 242.06340055648113 ...         3          5   22.2201\n",
+       "       -1      5 241.98680063073462 ...         4          5 23.035995\n",
+       "       -1      8  241.3032972005574 ...         5          5 22.939604\n",
        "      ...    ...                ... ...       ...        ...       ...\n",
-       "       -1     -1 241.46714550724062 ...      6014          1      -1.0\n",
-       "       -1      1 241.46656383178802 ...      6015          1  22.65794\n",
-       "       -1      9 241.46554216199135 ...      6016          1 19.345657\n",
-       "       -1     -1 241.46192646767818 ...      6017          1      -1.0\n",
-       "       -1      2 241.45334710095378 ...      6018          1  22.10372\n",
-       "       -1      1 241.43644828815394 ...      6019          1 21.120995"
+       "       -1      5 240.32572837599324 ...     42739          1 22.734367\n",
+       "       -1      1 240.32490884476883 ...     42740          1 23.053959\n",
+       "       -1     -1  240.3203266020432 ...     42741          1      -1.0\n",
+       "       -1      1 240.31779816823231 ...     42742          1 22.899134\n",
+       "       -1     -1 240.30599747957098 ...     42743          1      -1.0\n",
+       "       -1     -1 240.29256798129626 ...     42744          1      -1.0"
       ]
      },
      "metadata": {},
@@ -104,7 +111,7 @@
     "#Add magnitude column\n",
     "col_template_copy = dd_vasca_columns[\"mag\"].copy()\n",
     "del col_template_copy[\"default\"]\n",
-    "col = Column(flux2mag(tt_srcs[\"flux\"])[0].value, **col_template_copy)\n",
+    "col = Column(flux2mag(tt_srcs[\"flux\"].quantity).value, **col_template_copy)\n",
     "tt_srcs[\"mag\"] = col\n",
     "\n",
     "display(tt_srcs)"
