--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -26,7 +26,8 @@
    "outputs": [],
    "source": [
     "region_name = \"TDS_ELAISN1\" # _ELAISN1\n",
-    "sort_par = \"rg_src_id\" # \"flux\" \n",
+    "sort_par = \"rg_src_id\" # \"flux\"\n",
+    "redo_src_sel = True\n",
     "only_sel_srcs = True\n",
     "srcs_ids = [] #[ 1932,  2017,  2018,  2849,  3839,  4300,  4665,  5239,  6173, 6217,  7125,  8407,  9443,  9710, 13543, 14042, 16926, 18771, 19305, 19909, 19986, 27586, 28065, 30891, 30911, 31661, 33963,34725, 35193, 35636]"
    ]
@@ -38,7 +39,15 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nr sources: 42745 / 298\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib widget\n",
     "import ipywidgets as widgets\n",
@@ -55,7 +64,7 @@
     "from vasca.field import BaseField\n",
     "import vasca.visualization as vvis\n",
     "\n",
-    "from vasca.utils import mag2flux\n",
+    "from vasca.utils import mag2flux,sel_sources\n",
     "\n",
     "#Setup some global setup parameters that usually don't need to be adjusted\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
@@ -67,13 +76,20 @@
     "rg = Region()\n",
     "rg.load_from_fits(region_fname)\n",
     "\n",
+    "#Select source pool to show\n",
+    "if redo_src_sel:\n",
+    "    sel_vasca =  sel_sources(rg.tt_sources)\n",
+    "    rg.tt_sources[\"sel\"][:]=sel_vasca \n",
+    "print(\"Nr sources:\",len(rg.tt_sources),\"/\",rg.tt_sources[\"sel\"].sum())\n",
+    "    \n",
     "tt_srcs = rg.tt_sources\n",
+    "\n",
     "if only_sel_srcs:\n",
     "    tt_srcs = rg.tt_sources[rg.tt_sources[\"sel\"]]\n",
     "nr_srcs = len(tt_srcs)\n",
     "tt_srcs.sort(sort_par)\n",
     "tt_srcs.add_index(\"rg_src_id\")\n",
-    "#display(tt_srcs)"
+    "#display(tt_srcs)\n"
    ]
   },
   {
@@ -95,12 +111,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4696c80cdcf74b09a1da7f24ee159c43",
+       "model_id": "d0fc674b2a184280b9da39f2ba5bf6a8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(132, 157, 189, 224, 263, 288, 321, 34…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(37, 106, 132, 157, 189, 224, 263, 288…"
       ]
      },
      "metadata": {},
@@ -154,6 +170,7 @@
     "    \n",
     "    fig_lc_src = plt.figure(\"Light curve\",figsize=(8, 4))\n",
     "    plt.cla()\n",
+    "    print(rg_src_id)\n",
     "    vvis.plot_light_curve(rg, rg_src_ids = rg_src_id,fig=fig_lc_src) #\n",
     "    plt.show()\n",
     "    \n",
@@ -204,27 +221,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "aaa5317e-41b7-47fe-9dca-29ae84bc127b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad6bdaec2a104b699345d76314a89330",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='rg_fd_id', max=0), Output()), _dom_classes=('widget-inte…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plot_sky_field(rg_fd_id):\n",
     "    if rg_fd_id not in rg.tt_fields[\"rg_fd_id\"]:\n",
@@ -251,25 +253,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b4b6f33c-ac4d-4467-a780-804bee76b0dd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47cc5ed450064c9499720ace72b0f841",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=4, description='block_nr', max=8), Output()), _dom_classes=('widget-inte…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nr_blocks = int(nr_srcs/lc_block_srcs)+1 \n",
     "def plot_lc_range(block_nr):\n",
@@ -308,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
